--- a/Frontend_IMA/package.json
+++ b/Frontend_IMA/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "csvtojson": "^2.0.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
